--- a/Principales Retos.html
+++ b/Principales Retos.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="dropdownmenu">
         <ul>
-            <li><a href="Index.html">Portada</a></li>
+            <li><a href="index.html">Portada</a></li>
             <li><a href="ODS.html">ODS</a>
             <li><a href="Principales Retos.html">Principales Retos</a>
             <li><a href="#">¿Que puedo hacer?</a>
