--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Portad</title>
+    <title>Portada</title>
 </head>
 <body>
     
@@ -13,7 +13,7 @@
             <li><a href="index.html">Portada</a></li>
             <li><a href="ODS.html">ODS</a>
             <li><a href="Principales Retos.html">Principales Retos</a>
-            <li><a href="#">¿Que puedo hacer?</a>
+            <li><a href="SectotresProductivos.html">Sectores Productivos</a>
             <li><a href="#">Alianzas</a>
             <li><a href="#">Noticias y Medios de Información </a>    
             </li>
