--- a/Principales Retos.html
+++ b/Principales Retos.html
@@ -12,7 +12,7 @@
             <li><a href="index.html">Portada</a></li>
             <li><a href="ODS.html">ODS</a>
             <li><a href="Principales Retos.html">Principales Retos</a>
-            <li><a href="#">¿Que puedo hacer?</a>
+            <li><a href="SectotresProductivos.html">Sectores Productivos</a>
             <li><a href="#">Alianzas</a>
             <li><a href="#">Noticias y Medios de Información </a>
             </li>
