--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <nav class="dropdownmenu">
         <ul>
-            <li><a href="index.html">Portada</a></li>
+            <li><a href="index.html">Portad</a></li>
             <li><a href="ODS.html">ODS</a>
             <li><a href="Principales Retos.html">Principales Retos</a>
             <li><a href="SectotresProductivos.html">Sectores Productivos</a>
