--- a/SectotresProductivos.html
+++ b/SectotresProductivos.html
@@ -12,8 +12,8 @@
             <li><a href="index.html">Portada</a></li>
             <li><a href="ODS.html">ODS</a></li>
             <li><a href="Principales Retos.html">Principales Retos</a></li>
-            <li><a href="#">Sectores Productivos</a></li>
-            <li><a href="#">Alianzas</a></li>
+            <li><a href="SectotresProductivos.html">Sectores Productivos</a></li>
+            <li><a href="Economía Circular.html">Economía Circular</a></li>
             <li><a href="#">Noticias y Medios de Información</a></li>
             <li><a href="#">Recursos</a></li>
         </ul>
