--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     
     <nav class="dropdownmenu">
         <ul>
-            <li><a href="index.html">Portad</a></li>
+            <li><a href="index.html">Portada</a></li>
             <li><a href="ODS.html">ODS</a>
             <li><a href="Principales Retos.html">Principales Retos</a>
             <li><a href="SectotresProductivos.html">Sectores Productivos</a>
-            <li><a href="#">Alianzas</a>
+            <li><a href="Economía Circular.html">Economía Circular</a></li>
             <li><a href="#">Noticias y Medios de Información </a>    
             </li>
             <li><a href="#">Recursos</a></li>
